# orin

./: CLAUDE.md  README.md  mqtt_llm.py  mqtt_llm_temp.py  mqtt_telemetry.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  mypy.yml
scripts/: ci.sh  lint.sh  test.sh  typecheck.sh
systemd/: install.sh  orin-mqtt-llm.service  orin-mqtt-telemetry.service
tests/: conftest.py  requirements.txt  test_callbacks.py  test_integration.py  test_shutdown.py  test_status.py  test_stream_ollama_generate.py  test_telemetry_callbacks.py  test_telemetry_integration.py  test_telemetry_publish.py  test_telemetry_shutdown.py
tests/fixtures/fake_jtop_fail/jtop/: __init__.py
tests/fixtures/fake_jtop_success/jtop/: __init__.py
